// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MediaList /> should render correctly in grid view 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-bcXGCL iVdfgd"
    >
      <div
        className="sc-bcXGCL gEdUob"
      >
        <img
          className="sc-bcXGCL jFStQb"
          src="/media/1.png"
        />
        <div
          className="sc-bcXGCL jcqomd"
        >
          <div
            className="sc-bcXGCL hPsFMg"
          >
            <div
              className="sc-bcXGCL egcRuI cap-buttonGroup"
              onMouseLeave={[Function]}
            >
              <button
                aria-describedby="id-g"
                aria-label="global.more"
                className="sc-bcXGCL ezspYQ cap-buttonQuickAction"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
                tabIndex={0}
              >
                <svg
                  aria-hidden="true"
                  className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  viewBox="0 0 10 6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clipRule="evenodd"
                    d="M.19 2.505C1.355 1.222 3.208-.03 5 0 6.79-.03 8.643 1.222 9.81 2.505a.74.74 0 010 .989C8.67 4.749 6.822 6.03 5 5.999 3.176 6.03 1.33 4.75.19 3.494a.74.74 0 010-.99zm6.195 1.421a1.667 1.667 0 10-2.771-1.853 1.667 1.667 0 002.771 1.853z"
                    fill="currentColor"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
              <div
                className="cap-tooltip-container"
                hidden={true}
                id="id-g"
                onAnimationEnd={[Function]}
                onTransitionEnd={[Function]}
                role="tooltip"
                style={
                  {
                    "display": "none",
                    "left": "100%",
                    "pointerEvents": "none",
                    "position": "fixed",
                    "top": "100%",
                    "zIndex": 1800,
                  }
                }
              />
              <button
                aria-describedby="id-g"
                aria-label="copy-link"
                className="sc-bcXGCL ezspYQ cap-buttonQuickAction"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
              >
                <svg
                  aria-hidden="true"
                  className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.666 8.333l4.665-4.665M4.103 6.01a1.987 1.987 0 00-1.518.578l-1 1a2 2 0 002.828 2.827l1-1a1.987 1.987 0 00.577-1.518M7.892 5.99a1.987 1.987 0 001.518-.577l1-1a2 2 0 00-2.827-2.827l-1 1a1.988 1.988 0 00-.575 1.517"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={0.8}
                  />
                </svg>
              </button>
              <div
                className="cap-tooltip-container"
                hidden={true}
                id="id-g"
                onAnimationEnd={[Function]}
                onTransitionEnd={[Function]}
                role="tooltip"
                style={
                  {
                    "display": "none",
                    "left": "100%",
                    "pointerEvents": "none",
                    "position": "fixed",
                    "top": "100%",
                    "zIndex": 1800,
                  }
                }
              />
              <button
                aria-describedby="id-g"
                aria-label="global.delete"
                className="sc-bcXGCL bsxzJl cap-buttonQuickAction"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
              >
                <svg
                  aria-hidden="true"
                  className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.091 3.75H1.909a.286.286 0 00-.193.073.24.24 0 00-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 00.32-.707V4a.24.24 0 00-.08-.177.286.286 0 00-.193-.073zm-5.045 6.5a.36.36 0 01-.12.265.429.429 0 01-.29.11.429.429 0 01-.289-.11.36.36 0 01-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11c.108 0 .212.04.289.11a.36.36 0 01.12.265v4.5zm2.727 0a.36.36 0 01-.12.265.429.429 0 01-.29.11.429.429 0 01-.289-.11.36.36 0 01-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11.108 0 .212.04.289.11a.36.36 0 01.12.265v4.5zM11.454 2h-2.59a.143.143 0 01-.097-.037.12.12 0 01-.04-.088V1.25a1.2 1.2 0 00-.4-.884A1.429 1.429 0 007.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 00-.4.884v.625a.12.12 0 01-.04.088.143.143 0 01-.096.037H.546a.572.572 0 00-.386.146A.48.48 0 000 2.5c0 .133.057.26.16.354A.572.572 0 00.545 3h10.91a.572.572 0 00.385-.146A.48.48 0 0012 2.5a.48.48 0 00-.16-.354.572.572 0 00-.386-.146zm-7.09-.125V1.25a.24.24 0 01.08-.177A.286.286 0 014.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 01.08.177v.625a.12.12 0 01-.04.088A.143.143 0 017.5 2h-3a.143.143 0 01-.096-.037.12.12 0 01-.04-.088z"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <div
                className="cap-tooltip-container"
                hidden={true}
                id="id-g"
                onAnimationEnd={[Function]}
                onTransitionEnd={[Function]}
                role="tooltip"
                style={
                  {
                    "display": "none",
                    "left": "100%",
                    "pointerEvents": "none",
                    "position": "fixed",
                    "top": "100%",
                    "zIndex": 1800,
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-bcXGCL cSnTgC"
          >
            <div
              className="sc-bcXGCL kzRATa"
            >
              <div
                className="sc-bcXGCL jZwtPn sc-fXqqsB gKbWOe cap-tag"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
                title="200x200px"
              >
                200x200px
              </div>
              <div
                className="sc-bcXGCL jZwtPn sc-fXqqsB gKbWOe cap-tag"
                style={{}}
                title="39ko"
              >
                39ko
              </div>
              <div
                className="sc-bcXGCL jZwtPn sc-fXqqsB gKbWOe cap-tag"
                style={{}}
                title="png"
              >
                png
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-bcXGCL gEdUob"
      >
        <img
          className="sc-bcXGCL jFStQb"
          src="/media/2.png"
        />
        <div
          className="sc-bcXGCL jcqomd"
        >
          <div
            className="sc-bcXGCL hPsFMg"
          >
            <div
              className="sc-bcXGCL egcRuI cap-buttonGroup"
              onMouseLeave={[Function]}
            >
              <button
                aria-describedby="id-g"
                aria-label="global.more"
                className="sc-bcXGCL ezspYQ cap-buttonQuickAction"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
                tabIndex={0}
              >
                <svg
                  aria-hidden="true"
                  className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  viewBox="0 0 10 6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clipRule="evenodd"
                    d="M.19 2.505C1.355 1.222 3.208-.03 5 0 6.79-.03 8.643 1.222 9.81 2.505a.74.74 0 010 .989C8.67 4.749 6.822 6.03 5 5.999 3.176 6.03 1.33 4.75.19 3.494a.74.74 0 010-.99zm6.195 1.421a1.667 1.667 0 10-2.771-1.853 1.667 1.667 0 002.771 1.853z"
                    fill="currentColor"
                    fillRule="evenodd"
                  />
                </svg>
              </button>
              <div
                className="cap-tooltip-container"
                hidden={true}
                id="id-g"
                onAnimationEnd={[Function]}
                onTransitionEnd={[Function]}
                role="tooltip"
                style={
                  {
                    "display": "none",
                    "left": "100%",
                    "pointerEvents": "none",
                    "position": "fixed",
                    "top": "100%",
                    "zIndex": 1800,
                  }
                }
              />
              <button
                aria-describedby="id-g"
                aria-label="copy-link"
                className="sc-bcXGCL ezspYQ cap-buttonQuickAction"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
              >
                <svg
                  aria-hidden="true"
                  className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.666 8.333l4.665-4.665M4.103 6.01a1.987 1.987 0 00-1.518.578l-1 1a2 2 0 002.828 2.827l1-1a1.987 1.987 0 00.577-1.518M7.892 5.99a1.987 1.987 0 001.518-.577l1-1a2 2 0 00-2.827-2.827l-1 1a1.988 1.988 0 00-.575 1.517"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={0.8}
                  />
                </svg>
              </button>
              <div
                className="cap-tooltip-container"
                hidden={true}
                id="id-g"
                onAnimationEnd={[Function]}
                onTransitionEnd={[Function]}
                role="tooltip"
                style={
                  {
                    "display": "none",
                    "left": "100%",
                    "pointerEvents": "none",
                    "position": "fixed",
                    "top": "100%",
                    "zIndex": 1800,
                  }
                }
              />
              <button
                aria-describedby="id-g"
                aria-label="global.delete"
                className="sc-bcXGCL bsxzJl cap-buttonQuickAction"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
              >
                <svg
                  aria-hidden="true"
                  className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                  fill="none"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.091 3.75H1.909a.286.286 0 00-.193.073.24.24 0 00-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 00.32-.707V4a.24.24 0 00-.08-.177.286.286 0 00-.193-.073zm-5.045 6.5a.36.36 0 01-.12.265.429.429 0 01-.29.11.429.429 0 01-.289-.11.36.36 0 01-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11c.108 0 .212.04.289.11a.36.36 0 01.12.265v4.5zm2.727 0a.36.36 0 01-.12.265.429.429 0 01-.29.11.429.429 0 01-.289-.11.36.36 0 01-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11.108 0 .212.04.289.11a.36.36 0 01.12.265v4.5zM11.454 2h-2.59a.143.143 0 01-.097-.037.12.12 0 01-.04-.088V1.25a1.2 1.2 0 00-.4-.884A1.429 1.429 0 007.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 00-.4.884v.625a.12.12 0 01-.04.088.143.143 0 01-.096.037H.546a.572.572 0 00-.386.146A.48.48 0 000 2.5c0 .133.057.26.16.354A.572.572 0 00.545 3h10.91a.572.572 0 00.385-.146A.48.48 0 0012 2.5a.48.48 0 00-.16-.354.572.572 0 00-.386-.146zm-7.09-.125V1.25a.24.24 0 01.08-.177A.286.286 0 014.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 01.08.177v.625a.12.12 0 01-.04.088A.143.143 0 017.5 2h-3a.143.143 0 01-.096-.037.12.12 0 01-.04-.088z"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <div
                className="cap-tooltip-container"
                hidden={true}
                id="id-g"
                onAnimationEnd={[Function]}
                onTransitionEnd={[Function]}
                role="tooltip"
                style={
                  {
                    "display": "none",
                    "left": "100%",
                    "pointerEvents": "none",
                    "position": "fixed",
                    "top": "100%",
                    "zIndex": 1800,
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-bcXGCL cSnTgC"
          >
            <div
              className="sc-bcXGCL kzRATa"
            >
              <div
                className="sc-bcXGCL jZwtPn sc-fXqqsB gKbWOe cap-tag"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
                title="100x300px"
              >
                100x300px
              </div>
              <div
                className="sc-bcXGCL jZwtPn sc-fXqqsB gKbWOe cap-tag"
                style={{}}
                title="29ko"
              >
                29ko
              </div>
              <div
                className="sc-bcXGCL jZwtPn sc-fXqqsB gKbWOe cap-tag"
                style={{}}
                title="png"
              >
                png
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<MediaList /> should render correctly in list view 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cPDORD"
  >
    <div
      className="sc-bcXGCL gLAKX"
    >
      <table
        className="sc-bcXGCL gLAKX"
      >
        <thead
          className="sc-bcXGCL ieyhyf"
        >
          <tr
            className="sc-bcXGCL fBvmdL cap-table__tr"
          >
            <th
              className="sc-bcXGCL kzlEhb cap-table__th"
            >
              <span
                className="sc-bcXGCL jjOndZ cap-visuallyHidden"
                style={
                  {
                    "clip": "rect(0px, 0px, 0px, 0px)",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                <label
                  aria-label="Select all lines"
                  htmlFor="allRows"
                />
              </span>
              <input
                className="all-rows-checkbox"
                id="allRows"
                onChange={[Function]}
                type="checkbox"
              />
            </th>
            <th
              className="sc-bcXGCL jpIMR cap-table__th"
            >
              global.media
            </th>
            <th
              className="sc-bcXGCL jpIMR cap-table__th"
            >
              global.preview
            </th>
            <th
              className="sc-bcXGCL jpIMR cap-table__th"
            >
              editor.media.size
            </th>
            <th
              className="sc-bcXGCL jpIMR cap-table__th"
            >
              table-head-label
            </th>
            <th
              className="sc-bcXGCL jpIMR cap-table__th"
            >
              mediator.add_date
            </th>
            <th
              className="sc-bcXGCL jpIMR cap-table__th"
            />
          </tr>
        </thead>
        <tbody
          className="sc-bcXGCL iLxPWX cap-table__tbody"
        >
          <tr
            className="sc-bcXGCL iNielt cap-table__tr"
            id="UG9zdDpwb3N0MTI="
          >
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              <input
                checked={false}
                className="sc-bcXGCL cklhXU"
                id="checkbox-UG9zdDpwb3N0MTI="
                onChange={[Function]}
                type="checkbox"
              />
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              Media 1
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              <div
                className="sc-bcXGCL iGwcgg"
              >
                <img
                  className="sc-bcXGCL iNTcFu"
                  loading="lazy"
                  src="/media/1.png"
                />
                <button
                  className="sc-bcXGCL hEIJAe"
                  onClick={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-eJDTud SenNr hEjMCZ cap-icon"
                    fill="none"
                    viewBox="0 0 10 6"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M.19 2.505C1.355 1.222 3.208-.03 5 0 6.79-.03 8.643 1.222 9.81 2.505a.74.74 0 010 .989C8.67 4.749 6.822 6.03 5 5.999 3.176 6.03 1.33 4.75.19 3.494a.74.74 0 010-.99zm6.195 1.421a1.667 1.667 0 10-2.771-1.853 1.667 1.667 0 002.771 1.853z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              200 x 200 px
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              39ko
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              Invalid date
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              onMouseLeave={[Function]}
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              <div
                className="sc-bcXGCL egcRuI cap-buttonGroup"
              >
                <button
                  aria-describedby="id-g"
                  aria-label="copy-link"
                  className="sc-bcXGCL ezspYQ cap-buttonQuickAction"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                  tabIndex={0}
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                    fill="none"
                    viewBox="0 0 12 12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.666 8.333l4.665-4.665M4.103 6.01a1.987 1.987 0 00-1.518.578l-1 1a2 2 0 002.828 2.827l1-1a1.987 1.987 0 00.577-1.518M7.892 5.99a1.987 1.987 0 001.518-.577l1-1a2 2 0 00-2.827-2.827l-1 1a1.988 1.988 0 00-.575 1.517"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                  </svg>
                </button>
                <div
                  className="cap-tooltip-container"
                  hidden={true}
                  id="id-g"
                  onAnimationEnd={[Function]}
                  onTransitionEnd={[Function]}
                  role="tooltip"
                  style={
                    {
                      "display": "none",
                      "left": "100%",
                      "pointerEvents": "none",
                      "position": "fixed",
                      "top": "100%",
                      "zIndex": 1800,
                    }
                  }
                />
                <button
                  aria-describedby="id-g"
                  aria-label="global.delete"
                  className="sc-bcXGCL bsxzJl cap-buttonQuickAction"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  tabIndex={0}
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                    fill="none"
                    viewBox="0 0 12 12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.091 3.75H1.909a.286.286 0 00-.193.073.24.24 0 00-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 00.32-.707V4a.24.24 0 00-.08-.177.286.286 0 00-.193-.073zm-5.045 6.5a.36.36 0 01-.12.265.429.429 0 01-.29.11.429.429 0 01-.289-.11.36.36 0 01-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11c.108 0 .212.04.289.11a.36.36 0 01.12.265v4.5zm2.727 0a.36.36 0 01-.12.265.429.429 0 01-.29.11.429.429 0 01-.289-.11.36.36 0 01-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11.108 0 .212.04.289.11a.36.36 0 01.12.265v4.5zM11.454 2h-2.59a.143.143 0 01-.097-.037.12.12 0 01-.04-.088V1.25a1.2 1.2 0 00-.4-.884A1.429 1.429 0 007.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 00-.4.884v.625a.12.12 0 01-.04.088.143.143 0 01-.096.037H.546a.572.572 0 00-.386.146A.48.48 0 000 2.5c0 .133.057.26.16.354A.572.572 0 00.545 3h10.91a.572.572 0 00.385-.146A.48.48 0 0012 2.5a.48.48 0 00-.16-.354.572.572 0 00-.386-.146zm-7.09-.125V1.25a.24.24 0 01.08-.177A.286.286 0 014.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 01.08.177v.625a.12.12 0 01-.04.088A.143.143 0 017.5 2h-3a.143.143 0 01-.096-.037.12.12 0 01-.04-.088z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <div
                  className="cap-tooltip-container"
                  hidden={true}
                  id="id-g"
                  onAnimationEnd={[Function]}
                  onTransitionEnd={[Function]}
                  role="tooltip"
                  style={
                    {
                      "display": "none",
                      "left": "100%",
                      "pointerEvents": "none",
                      "position": "fixed",
                      "top": "100%",
                      "zIndex": 1800,
                    }
                  }
                />
              </div>
            </td>
          </tr>
          <tr
            className="sc-bcXGCL iNielt cap-table__tr"
            id="UG9zdDpwb3N0MTL="
          >
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              <input
                checked={false}
                className="sc-bcXGCL cklhXU"
                id="checkbox-UG9zdDpwb3N0MTL="
                onChange={[Function]}
                type="checkbox"
              />
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              Media 2
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              <div
                className="sc-bcXGCL iGwcgg"
              >
                <img
                  className="sc-bcXGCL iNTcFu"
                  loading="lazy"
                  src="/media/2.png"
                />
                <button
                  className="sc-bcXGCL hEIJAe"
                  onClick={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-eJDTud SenNr hEjMCZ cap-icon"
                    fill="none"
                    viewBox="0 0 10 6"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M.19 2.505C1.355 1.222 3.208-.03 5 0 6.79-.03 8.643 1.222 9.81 2.505a.74.74 0 010 .989C8.67 4.749 6.822 6.03 5 5.999 3.176 6.03 1.33 4.75.19 3.494a.74.74 0 010-.99zm6.195 1.421a1.667 1.667 0 10-2.771-1.853 1.667 1.667 0 002.771 1.853z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              100 x 300 px
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              29ko
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              Invalid date
            </td>
            <td
              className="sc-bcXGCL phWty cap-table__td"
              onMouseLeave={[Function]}
              style={
                {
                  "whiteSpace": "initial",
                }
              }
            >
              <div
                className="sc-bcXGCL egcRuI cap-buttonGroup"
              >
                <button
                  aria-describedby="id-g"
                  aria-label="copy-link"
                  className="sc-bcXGCL ezspYQ cap-buttonQuickAction"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                  tabIndex={0}
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                    fill="none"
                    viewBox="0 0 12 12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.666 8.333l4.665-4.665M4.103 6.01a1.987 1.987 0 00-1.518.578l-1 1a2 2 0 002.828 2.827l1-1a1.987 1.987 0 00.577-1.518M7.892 5.99a1.987 1.987 0 001.518-.577l1-1a2 2 0 00-2.827-2.827l-1 1a1.988 1.988 0 00-.575 1.517"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                  </svg>
                </button>
                <div
                  className="cap-tooltip-container"
                  hidden={true}
                  id="id-g"
                  onAnimationEnd={[Function]}
                  onTransitionEnd={[Function]}
                  role="tooltip"
                  style={
                    {
                      "display": "none",
                      "left": "100%",
                      "pointerEvents": "none",
                      "position": "fixed",
                      "top": "100%",
                      "zIndex": 1800,
                    }
                  }
                />
                <button
                  aria-describedby="id-g"
                  aria-label="global.delete"
                  className="sc-bcXGCL bsxzJl cap-buttonQuickAction"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  tabIndex={0}
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon cap-buttonQuickAction-icon"
                    fill="none"
                    viewBox="0 0 12 12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.091 3.75H1.909a.286.286 0 00-.193.073.24.24 0 00-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 00.32-.707V4a.24.24 0 00-.08-.177.286.286 0 00-.193-.073zm-5.045 6.5a.36.36 0 01-.12.265.429.429 0 01-.29.11.429.429 0 01-.289-.11.36.36 0 01-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11c.108 0 .212.04.289.11a.36.36 0 01.12.265v4.5zm2.727 0a.36.36 0 01-.12.265.429.429 0 01-.29.11.429.429 0 01-.289-.11.36.36 0 01-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11.108 0 .212.04.289.11a.36.36 0 01.12.265v4.5zM11.454 2h-2.59a.143.143 0 01-.097-.037.12.12 0 01-.04-.088V1.25a1.2 1.2 0 00-.4-.884A1.429 1.429 0 007.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 00-.4.884v.625a.12.12 0 01-.04.088.143.143 0 01-.096.037H.546a.572.572 0 00-.386.146A.48.48 0 000 2.5c0 .133.057.26.16.354A.572.572 0 00.545 3h10.91a.572.572 0 00.385-.146A.48.48 0 0012 2.5a.48.48 0 00-.16-.354.572.572 0 00-.386-.146zm-7.09-.125V1.25a.24.24 0 01.08-.177A.286.286 0 014.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 01.08.177v.625a.12.12 0 01-.04.088A.143.143 0 017.5 2h-3a.143.143 0 01-.096-.037.12.12 0 01-.04-.088z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <div
                  className="cap-tooltip-container"
                  hidden={true}
                  id="id-g"
                  onAnimationEnd={[Function]}
                  onTransitionEnd={[Function]}
                  role="tooltip"
                  style={
                    {
                      "display": "none",
                      "left": "100%",
                      "pointerEvents": "none",
                      "position": "fixed",
                      "top": "100%",
                      "zIndex": 1800,
                    }
                  }
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
]
`;
